<resources>
    <string name="app_name">garden-app</string>
    <string name="smart_garden">Smart Garden</string>
    <string name="light_system">Light System</string>
    <string name="led_1">Led 1</string>
    <string name="led_2">Led 2</string>
    <string name="led_3">Led 3</string>
    <string name="led_4">Led 4</string>
    <string name="on_off">On/Off</string>
    <string name="default_value">0</string>
    <string name="irrigation_system">Irrigation System</string>
    <string name="open_close">Open/Close</string>
    <string name="require_manual_control">Require Manual Control</string>
    <string name="select_device">Select device</string>
    <string name="select_device_hint">Select a device from the list below. If you cannot find it, ensure that it has already been paired with this device.</string>
    <string name="device_list_title">Paired devices:</string>
    <string name="bluetooth_switch_on">Switch bluetooth on</string>
    <string name="bluetooth_switch_off">Switch bluetooth off</string>
    <string name="reload_device_list">Reload</string>
    <string name="default_value_irr">1</string>
</resources>